--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                     <a href="#" class="md:text-yellow-700 font-semibold" aria-current="page">Home</a>
                 </li>
                 <li>
-                    <a href="sights.html" class="md:hover:text-stone-400">Sights</a>
+                    <a asp-action="Sights" class="md:hover:text-stone-400">Sights</a>
                 </li>
                 <li>
                     <a href="#" class="md:hover:text-stone-400">Quick Guides</a>
@@ -38,27 +38,39 @@
             </div>
         </div>
 
-        <div id="oll" class="luzon overflow-x-scroll flex flex-nowrap justify-left space-x-5">
+        <div id="oll" class="luzon overflow-x-scroll flex  space-x-5">
             @foreach (var city in ViewBag.Luzon)
             {
-                <img src="@city.Image" class="object-cover w-40 h-72 py-8 rounded-full">
+
+                <a href="/home/cityview?id=@city.Id" class="shrink-0  w-40 h-72 py-8 rounded-full relative overflow-hidden group cursor-pointer">
+                    <img src="@city.Image" class="h-full rounded-full object-cover group-hover:scale-110 duration-200 transition-all" />
+                    <span class="text-white text-lg font-medium absolute top-0 left-0 right-0 bottom-0 flex items-center justify-center ">@city.Name</span>
+                </a>
+              
+          
             }
         </div>
         <div id="oll" class="hidden visayas overflow-x-scroll flex flex-nowrap justify-left space-x-5">
         @foreach(var city in ViewBag.Visayas)
         {
-                <img src="@city.Image" class="object-cover w-40 h-72 py-8 rounded-full">
+                <a href="/home/cityview?id=@city.Id" class="shrink-0  w-40 h-72 py-8 rounded-full relative overflow-hidden group cursor-pointer">
+                    <img src="@city.Image" class="h-full rounded-full object-cover group-hover:scale-110 duration-200 transition-all" />
+                    <span class="text-white text-lg font-medium absolute top-0 left-0 right-0 bottom-0 flex items-center justify-center ">@city.Name</span>
+                </a>
         }
         </div>
         <div id="oll" class="hidden mindanao overflow-x-scroll flex flex-nowrap justify-left space-x-5">
             @foreach (var city in ViewBag.Mindanao)
             {
-                <img src="@city.Image" class="object-cover w-40 h-72 py-8 rounded-full">
+                <a href="/home/CityView?id=@city.Id" class="shrink-0  w-40 h-72 py-8 rounded-full relative overflow-hidden group cursor-pointer">
+                    <img src="@city.Image" class="h-full rounded-full object-cover group-hover:scale-110 duration-200 transition-all" />
+                    <span class="text-white text-lg font-medium absolute top-0 left-0 right-0 bottom-0 flex items-center justify-center ">@city.Name</span>
+                </a>
             }
         </div>
         <h1 class="text-2xl font-semibold mb-4">View Places</h1>
         <div class="flex justify-left space-x-10">
-            <div class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-2xl w-20 h-32 rounded-full">
+            <a href="/home/category?category=Beaches" class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-2xl w-20 h-32 rounded-full">
                 <div class="flex flex-col items-center space-y-4 pt-2">
                     <!-- Circle -->
 
@@ -67,8 +79,8 @@
                     <!-- Text -->
                     <div class="font-medium text-gray-700 text-sm">Beaches</div>
                 </div>
-            </div>
-            <div class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
+            </a>
+            <a href="/home/category?category=Nature"  class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
                 <!-- Circle -->
                 <div class="flex flex-col items-center space-y-4 pt-2">
                     <!-- Circle -->
@@ -80,9 +92,9 @@
                 </div>
                 <!-- Text -->
              
-            </div>
+            </a>
 
-            <div class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
+            <a href="/home/category?category=City" class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
                 <!-- Circle -->
                 <div class="flex flex-col items-center space-y-4 pt-2">
                     <!-- Circle -->
@@ -92,9 +104,9 @@
                     <!-- Text -->
                     <div class="font-medium text-gray-700 text-sm">City</div>
                 </div>
-            </div>
+            </a>
 
-            <div class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
+            <a  href="/home/category?category=Historical"class="hover:scale-110 cursor-pointer transition-all duration-200 bg-zinc-50 shadow-lg w-20 h-32 rounded-full p-2">
                 <!-- Circle -->
                 <div class="flex flex-col items-center space-y-4 pt-2">
                     <!-- Circle -->
@@ -102,9 +114,9 @@
                     <img src="https://source.unsplash.com/400x400/?Mountain" class=" obgject-cover w-16 h-16 rounded-full " />
 
                     <!-- Text -->
-                    <div class="font-medium text-gray-700 text-sm">Museum</div>
+                    <div class="font-medium text-gray-700 text-sm">Historical</div>
                 </div>
-            </div>
+            </a>
 
         </div>
     </div>
